Release async operation bus v0.2.7
